--- a/JDCB/NugetProject/JDCB.nuspec
+++ b/JDCB/NugetProject/JDCB.nuspec
@@ -26,6 +26,7 @@
   </metadata>
   <files>
     <file src="tools\*.*" target="tools" />
+    <file src="tools\SLDllsForT4\*.*" target="tools\SLDllsForT4" />
     <file src="content\*.*" target="content" />
     <file src="lib\net45\*.*" target="lib\net45" />
     <file src="lib\netcore45\*.*" target="lib\netcore45" />
